syntax = "proto3";

option csharp_namespace = "GRPC.NET7.Client.Protos";
package authentication;


service Authentication {
	rpc Authenticate(AuthenticationRequest) returns (AuthenticationResponse) { }
}

message AuthenticationRequest {
	string UserName = 1;
	string Password = 2;
}

message AuthenticationResponse {
	string AccessToken = 1;
	int32 ExpiresIn = 2;
}