syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "Protos/base.proto";

option csharp_namespace = "GRPC.NET7.Api.Protos";
package user;

service User {
	rpc Create(UserCreateRequest) returns (base.BaseResponse) {	}
	rpc Get(google.protobuf.Empty) returns (base.BaseResponse) { }
}

message UserCreateRequest {
	string firstName = 1;
	string lastName = 2;
	string email = 3;
	//google.protobuf.Timestamp dateOfBirth = 4;
	string gender = 5;
}